# connect4-zero

./: .gitignore  AGENTS.md  README.md  pyproject.toml
archive/legacy_python/docs/site/: app.js  index.html
archive/legacy_python/play_web/: README.md  server.py
archive/legacy_python/play_web/static/: index.html  styles.css
archive/legacy_python/reports/: phase2_gpu_benchmark.md  phase2_mcts_benchmarks.md
archive/legacy_python/src/connect4_zero/: __init__.py
archive/legacy_python/src/connect4_zero/data/: __init__.py  loader.py  rust_binary.py  self_play.py  types.py
archive/legacy_python/src/connect4_zero/eval/: __init__.py  arena.py
archive/legacy_python/src/connect4_zero/game/: __init__.py  constants.py  engine.py  geometry.py
archive/legacy_python/src/connect4_zero/model/: __init__.py  checkpoint.py  resnet3d.py
archive/legacy_python/src/connect4_zero/scripts/: __init__.py  benchmark_puct.py  (+4 more)
archive/legacy_python/tests/data/: test_rust_binary_loader.py  test_self_play_data.py
archive/legacy_python/tests/game/: test_engine_batch.py  test_engine_wins.py  test_geometry.py  test_symmetries.py
archive/legacy_python/tests/model/: test_resnet3d.py
archive/legacy_python/tests/play_web/: test_session.py
archive/legacy_python/tests/scripts/: test_cli_scripts.py  test_play_terminal.py
archive/legacy_python/tests/search/: test_inference_server.py  test_neural_evaluator.py  test_puct_mcts.py  test_tree_mcts.py
archive/legacy_python/tests/train/: test_training_skeleton.py
archive/python_c4az_2026_05_14/docs/c4az_trace/: README.md  index.html  puct_demo_summary.json
archive/python_c4az_2026_05_14/docs/c4az_visual/: class_uml.mmd  data_lifecycle.mmd  index.html  module_dependencies.mmd  resnet_architecture.mmd  system_flow.mmd
archive/python_c4az_2026_05_14/src/c4az/: cli.py  data.py  selfplay.py
archive/python_c4az_2026_05_14/tests/c4az/: test_data_training_pipeline.py  test_game.py  test_mcts.py  test_network.py  test_trace_tools.py  test_visualize.py
archive/rust_prototype_2026_05_14/connect4_zero_rust/crates/c4-infer/: Cargo.toml
connect4_zero_rust/: Cargo.toml  README.md
connect4_zero_rust/crates/c4-arena/: Cargo.toml
connect4_zero_rust/crates/c4-arena/src/: lib.rs
connect4_zero_rust/crates/c4-cli/: Cargo.toml
connect4_zero_rust/crates/c4-cli/src/: lib.rs
connect4_zero_rust/crates/c4-core/src/: constants.rs  geometry.rs
connect4_zero_rust/crates/c4-infer/src/: lib.rs
connect4_zero_rust/crates/c4-search/src/: config.rs  diagnostics.rs  lib.rs
connect4_zero_rust/docs/: architecture.md
docs/: alpha_zero_spec.md  e2e_test_plan.md
docs/c4az_visual/: model_summary.json  puct_sequence.mmd
docs/site/: styles.css
play_web/: __init__.py  server.py
play_web/static/: app.js
src/c4az/: __init__.py  arena.py  cli.py  data.py  game.py  mcts.py  network.py  train.py  visualize.py
src/connect4_zero/data/: __init__.py  rust_binary.py  self_play.py  writer.py
src/connect4_zero/eval/: arena.py
src/connect4_zero/game/: symmetries.py  types.py
src/connect4_zero/scripts/: _common.py  arena_eval.py  benchmark_search.py  export_onnx.py  generate_selfplay.py  play_terminal.py  run_training_loop.py  train_resnet.py
src/connect4_zero/search/: __init__.py  batched.py  mcts.py  nodes.py  puct_mcts.py  puct_tree.py  tree.py  tree_mcts.py  types.py
src/connect4_zero/search/deprecated/: root_action.py
src/connect4_zero/train/: __init__.py
src/cpp/: CMakeLists.txt
src/cpp/apps/: c4zero.cpp
src/cpp/cmake/: version.hpp.in
src/cpp/include/c4zero/arena/: arena.hpp
src/cpp/include/c4zero/bots/: heuristic.hpp
src/cpp/include/c4zero/core/: position.hpp  symmetry.hpp
src/cpp/include/c4zero/curriculum/: stage0.hpp
src/cpp/include/c4zero/data/: shard.hpp
src/cpp/include/c4zero/model/: torchscript.hpp
src/cpp/include/c4zero/oracle/: solver.hpp
src/cpp/include/c4zero/play/: terminal.hpp
src/cpp/include/c4zero/search/: puct.hpp
src/cpp/include/c4zero/selfplay/: selfplay.hpp
src/cpp/include/c4zero/version/: info.hpp  version.hpp
src/cpp/include/c4zero/web/: server.hpp
src/cpp/src/arena/: arena.cpp
src/cpp/src/bots/: heuristic.cpp
src/cpp/src/core/: position.cpp  symmetry.cpp
src/cpp/src/curriculum/: stage0.cpp
src/cpp/src/data/: replay_buffer.cpp  shard.cpp
src/cpp/src/model/: encoder.cpp  torchscript.cpp
src/cpp/src/oracle/: solver.cpp
src/cpp/src/play/: terminal.cpp
src/cpp/src/search/: puct.cpp
src/cpp/src/selfplay/: selfplay.cpp
src/cpp/src/version/: version.cpp
src/cpp/src/web/: server.cpp
src/cpp/tests/: test_arena.cpp  test_bots.cpp  test_core.cpp  test_curriculum.cpp  test_data.cpp  test_oracle.cpp  test_play.cpp  test_puct.cpp  test_selfplay.cpp  test_support.hpp  test_torchscript_evaluator.cpp  test_version.cpp  test_web.cpp
src/python/c4zero_oracles/: __init__.py  gerard.py  portable.py
src/python/c4zero_supervised/: README.md  __init__.py  data.py  metrics.py  stage0_eval.py  stage0_train.py
src/python/c4zero_tools/: __init__.py  datasets.py  version.py  version_manifest.json
src/python/c4zero_train/: __init__.py  az_loop.py  checkpoint.py  cli.py  encoding.py  export.py  losses.py  model.py  replay.py  symmetry.py  symmetry_metrics.py  symmetry_repair.py  trainer.py
src/python/tests/: test_architecture_boundaries.py  test_az_loop.py  test_dataset_reader.py  test_oracle_eval.py  test_replay.py  test_supervised_stage0.py  test_symmetry_augmentation.py  test_symmetry_metrics.py  test_symmetry_repair.py  test_train_cli_symmetry.py  test_train_encoding.py  test_train_model.py  test_train_step_export.py  test_version_tools.py
src/web/play/: index.html  main.js  styles.css
tests/c4az/: test_data_training_pipeline.py
tests/data/: test_self_play_data.py
tests/e2e/fixtures/: operational_suites.json
tests/game/: test_engine_gravity.py
tests/scripts/: test_cli_scripts.py  test_play_terminal.py
tests/search/: test_batched_rollout.py  test_batched_root_action.py  test_mcts.py  test_rollout.py  test_tree_mcts.py
tests/search/deprecated/: test_batched_root_action.py
(+28 files in other folders)
