[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-zero"
version = "0.1.0"
description = "AlphaZero-style reinforcement learning for gravity-based 4x4x4 Connect Four."
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "safetensors>=0.4",
  "torch>=2.0",
]

[project.scripts]
connect4-benchmark-search = "connect4_zero.scripts.benchmark_search:main"
connect4-benchmark-puct = "connect4_zero.scripts.benchmark_puct:main"
connect4-arena-eval = "connect4_zero.scripts.arena_eval:main"
connect4-generate-selfplay = "connect4_zero.scripts.generate_selfplay:main"
connect4-play-terminal = "connect4_zero.scripts.play_terminal:main"
connect4-run-training-loop = "connect4_zero.scripts.run_training_loop:main"
connect4-train-resnet = "connect4_zero.scripts.train_resnet:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-ra"
