[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-zero"
version = "0.1.0"
description = "AlphaZero-style reinforcement learning for gravity-based 4x4x4 Connect Four."
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "torch>=2.0",
]

[project.scripts]
c4az-selfplay = "c4az.cli:selfplay_main"
c4az-train = "c4az.cli:train_main"
c4az-loop = "c4az.cli:loop_main"
c4az-arena = "c4az.cli:arena_main"
c4az-inspect-checkpoint = "c4az.cli:inspect_checkpoint_main"
c4az-generate-diagrams = "c4az.visualize:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-ra"
