[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c4zero-python"
version = "0.1.0"
description = "PyTorch training/export and inspection tools for the C++ AlphaZero 4x4x4 Connect Four implementation."
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "torch>=2.0",
]

[project.scripts]
c4zero-tools-version = "c4zero_tools.version:main"
c4zero-validate-dataset = "c4zero_tools.datasets:main"
c4zero-train = "c4zero_train.cli:train_main"
c4zero-export = "c4zero_train.cli:export_main"
c4zero-inspect-model = "c4zero_train.cli:inspect_model_main"
c4zero-loop = "c4zero_train.az_loop:loop_main"
c4zero-symmetry-repair = "c4zero_train.symmetry_repair:repair_main"
c4zero-oracle-eval = "c4zero_oracles.gerard:main"
c4zero-stage0-train = "c4zero_supervised.stage0_train:train_main"
c4zero-stage0-eval = "c4zero_supervised.stage0_eval:eval_main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
c4zero_tools = ["version_manifest.json"]

[tool.pytest.ini_options]
pythonpath = ["src/python", "."]
testpaths = ["src/python/tests"]
addopts = "-ra"
