[workspace]
members = [
    "crates/c4-arena",
    "crates/c4-cli",
    "crates/c4-core",
    "crates/c4-data",
    "crates/c4-infer",
    "crates/c4-search",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zstd = "0.13"

c4-arena = { path = "crates/c4-arena" }
c4-core = { path = "crates/c4-core" }
c4-data = { path = "crates/c4-data" }
c4-infer = { path = "crates/c4-infer" }
c4-search = { path = "crates/c4-search" }
