[package]
name = "c4-infer"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
c4-core.workspace = true
ndarray = { version = "0.16", optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
serde.workspace = true

[features]
default = []
onnx = ["dep:anyhow", "dep:ndarray", "dep:ort"]
